samples/_failures_safe/1761278997_53914f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_887ca6bd.c: In function ‘tokenize’:
./samples/SAFE/__tmp_887ca6bd.c:161:16: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  161 |         tokens[token
      |                ^~~~~
      |                Token
./samples/SAFE/__tmp_887ca6bd.c:161:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_887ca6bd.c:161:21: error: expected ‘]’ at end of input
  161 |         tokens[token
      |                     ^
      |                     ]
./samples/SAFE/__tmp_887ca6bd.c:161:9: error: expected declaration or statement at end of input
  161 |         tokens[token
      |         ^~~~~~
./samples/SAFE/__tmp_887ca6bd.c:161:9: error: expected declaration or statement at end of input
